# clocky-lang

./: Cargo.toml  README.md  clocky-ts-mode.el  index.html  index.js  processor.js  test.html  test.sh
.github/workflows/: pages.yml
examples/: 440.cky  map.ll  transformer.cky
runtime/: Cargo.toml
runtime/src/: lib.rs
sketching/: index.html  index.js  package-lock.json  package.json  processor.js  vite.config.js
src/: bindings.rs  builtin.rs  expr.rs  interp.rs  ir1.egg  ir1.rs  ir1_egglog.rs  ir2.rs  lib.rs  main.rs  parse.rs  runtime.rs  toplevel.rs  typing.rs  util.rs  wasm.rs
tests/: test.rs
tests/accept/: 440.cky  batch.cky  const.cky  double_good.cky  exist.cky  map.cky  poly.cky  sample.cky  sched.cky  transformer.cky  waves.cky
tests/reject/: double_bad1.cky  double_bad3.cky
tree-sitter-clocky/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-clocky/bindings/node/: binding.cc  index.js
tree-sitter-clocky/bindings/rust/: build.rs  lib.rs
tree-sitter-clocky/queries/: highlights.scm
tree-sitter-clocky/src/: grammar.json  node-types.json  parser.c
tree-sitter-clocky/test/corpus/: first.txt
tree-sitter-lambdalisten/: grammar.js  package-lock.json  package.json
