[package]
name = "clocky-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hound = "3.5.1"
string-interner = "0.15"
tree-sitter = "0.20"
tree-sitter-clocky = { path = "tree-sitter-clocky" }
typed-arena = "2.0.2"
num = "0.4"
indenter = "0.3"
imbl = "2.0.3"
wasm-encoder = "0.205"
wasmparser = "0.205"

[profile.release]
debug = true
