workspace = { members = ["runtime"] }
[package]
name = "clocky-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hound = "3.5.1"
byteorder = "1.5.0"
string-interner = "0.15"
tree-sitter = { package = "tree-sitter-c2rust", version = "0.20" }
tree-sitter-clocky = { path = "tree-sitter-clocky" }
typed-arena = "2.0.2"
num = "0.4"
indenter = "0.3"
imbl = "2.0.3"
wasm-encoder = "0.205"
wasmparser = "0.205"
indexmap = "2.2.6"
egglog = "0.2.0"
wasmtime = { version = "20.0", optional = true }
clocky-runtime = { path = "runtime", artifact = "cdylib", target = "wasm32-unknown-unknown" }
ordered-float = "3.9.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[features]
default = []
run = ["dep:wasmtime"]

[profile.release]
debug = true
lto = false

[lib]
name = "clocky"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clocky"
path = "src/main.rs"
